# PixivSearcher

./: .env.prod  README.md  bot.py  pyproject.toml  requirements.txt
src/plugins/pixiv/: __init__.py  account.json  account.py  search.py
src/plugins/pixiv/pixiv_site/: get_header.py
